# opengl_lib

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake_multi_platform.yml
data/shaders/: debug_frag.glsl  sample_frag.glsl  screen_frag.glsl  screen_vertex.glsl  vertex.glsl
examples/font_renderer/: CMakeLists.txt  font.h  main.cpp  renderer.h  shader_builder.h  utils.h
examples/font_renderer/data/shaders/: debug_vertex.glsl  font_frag.glsl  screen_frag.glsl  screen_vertex.glsl
src/: Font.h  Framebuffer.h  GlUtils.h  GladUtil.h  GlfwUtil.h  ImguiUtil.h  Mesh.h  Renderbuffer.h  Shader.h  StbiImageRAII.h  Texture.h  frame_buffer.h  ft_library_raii.h  glad_util.h  imgui_util.h  main.cpp  renderer.h  stb_image.h
src/GL3D/: frame_buffer.h  framebuffer.h  mesh.h  render_buffer.h  renderbuffer.h  shader.h  shader_program.h  shader_utils.h  texture.h
src/GLApp/: application.h  glfw_util.h  glfw_window_raii.h
src/GLExternalRAII/: ft_library_raii.h  glfw_window_raii.h  stb_image_raii.h
src/GLExternalUtils/: glad_util.h  glfw_util.h  imgui_util.h  opengl_util.h
src/GLRenderer/: font.h  glad_util.h  imgui_util.h  renderer.h  renderer_base.h  shader_builder.h
